--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Three.js Tile Move to Center</title>
+  <title>COUNTER MODEL</title>
   <style>
     body { margin: 0; overflow: hidden; background: #111; }
     canvas { display: block; }
@@ -76,9 +76,6 @@
       transform: translate(-50%, -50%);
       z-index: 99;
       display: none;
-      /* background: white; */
-   
-      /* box-shadow: 0 0 0 1px #ccc; */
     }
     #qrPopup img {
       width: 200px;
@@ -127,15 +124,18 @@
   <div class="control-dot" onclick="toggleDrawing()"></div>
   <div class="control-dot" onclick="clearDrawing()"></div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/three@0.160.1/build/three.min.js"></script>
 <script>
 let scene, camera, renderer;
 let outerSphereGroup = new THREE.Group();
 let innerSphereGroup = new THREE.Group();
 let stripGroup = new THREE.Group();
+stripGroup.visible = false; // ✅ hide strip initially
+
 let outerTiles = [], innerTiles = [], stripTiles = [];
 let outerWireframe, innerWireframe;
-let outerState = 0, innerState = 0, stripState = 0;
+let outerState = 0, innerState = 0;
 let selectedTile = null, movingToCenter = false;
 let originalPosition = null, originalQuaternion = null;
 let outerMeta = [], innerMeta = [], stripMeta = [];
@@ -144,6 +144,7 @@ let mouse = new THREE.Vector2();
 const raycaster = new THREE.Raycaster();
 const infoBox = document.getElementById('infoBox');
 
+// ✅ simplified visibility toggle
 function cycleVisibility(type) {
   if (type === 'outer') {
     outerState = (outerState + 1) % 3;
@@ -154,8 +155,7 @@ function cycleVisibility(type) {
     innerTiles.forEach(tile => tile.visible = innerState === 0);
     if (innerWireframe) innerWireframe.visible = innerState === 1;
   } else if (type === 'strip') {
-    stripState = (stripState + 1) % 3;
-    stripTiles.forEach(tile => tile.visible = stripState === 0);
+    stripGroup.visible = !stripGroup.visible; // ✅ toggle full strip visibility
   }
 }
 
@@ -189,24 +189,17 @@ function init() {
   });
 
   window.addEventListener('keydown', (e) => {
-    if (e.key === 'ArrowRight') {
-      stripGroup.position.x -= 0.01;
-    } else if (e.key === 'ArrowLeft') {
-      stripGroup.position.x += 0.01;
-    } else if (e.key === 'ArrowUp') {
-      stripTiles.forEach(tile => tile.material.opacity = Math.max(0.05, tile.material.opacity - 0.05));
-    } else if (e.key === 'ArrowDown') {
-      stripTiles.forEach(tile => tile.material.opacity = Math.min(1, tile.material.opacity + 0.05));
-    }
+    if (e.key === 'ArrowRight') stripGroup.position.x -= 0.01;
+    else if (e.key === 'ArrowLeft') stripGroup.position.x += 0.01;
+    else if (e.key === 'ArrowUp') stripTiles.forEach(tile => tile.material.opacity = Math.max(0.05, tile.material.opacity - 0.05));
+    else if (e.key === 'ArrowDown') stripTiles.forEach(tile => tile.material.opacity = Math.min(1, tile.material.opacity + 0.05));
   });
 
   const textureLoader = new THREE.TextureLoader();
+
+  // Load Are.na spheres and strip
   loadSphere('https://api.are.na/v2/channels/atmosphere-15ctioljas?per=100', outerSphereGroup, outerTiles, outerMeta, 3, textureLoader, 1, false, true, 10, 10);
-// loadSphere('https://api.are.na/v2/channels/indagaciones-atmosfericas-medialab-matadero?per=100', outerSphereGroup, outerTiles, outerMeta, 3, textureLoader, 1, false, true, 10, 10);  
-
-
-
-loadSphere('https://api.are.na/v2/channels/weather-viz?per=100', innerSphereGroup, innerTiles, innerMeta, 1.2, textureLoader, 1, true, true, 64, 64);
+  loadSphere('https://api.are.na/v2/channels/weather-viz?per=100', innerSphereGroup, innerTiles, innerMeta, 1.2, textureLoader, 1, true, true, 64, 64);
   loadStrip('https://api.are.na/v2/channels/models-hozys0dmom0?per=100', stripGroup, textureLoader);
 }
 
@@ -216,7 +209,7 @@ function createSphereWireframe(radius, widthSegments, heightSegments) {
   return wireframe;
 }
 
-  function loadStrip(url, group, textureLoader) {
+function loadStrip(url, group, textureLoader) {
   fetch(url)
     .then(res => res.json())
     .then(data => {
@@ -271,6 +264,7 @@ function loadSphere(url, group, tileArray, metaArray, radius, textureLoader, opa
       }
     });
 }
+
 function initTiles(images, radius, group, textureLoader, tileArray, opacity = 1, isInner = false) {
   const sphereArea = 4 * Math.PI * Math.pow(radius, 2);
   const areaPerTile = sphereArea / images.length;
@@ -342,7 +336,6 @@ function onDocumentClick(event) {
       const description = block.description || '';
       const user = block.user?.full_name || 'Unknown';
       document.getElementById('infoContent').innerHTML = `<strong>${title}</strong><br>${description}<br><em>Added by ${user}</em>`;
-
       infoBox.style.display = 'block';
     }
   } else if (selectedTile) {
@@ -373,6 +366,7 @@ function animate() {
   }
   renderer.render(scene, camera);
 }
+
 const drawCanvas = document.getElementById('drawingCanvas');
 const drawCtx = drawCanvas.getContext('2d');
 let drawing = false;
@@ -404,7 +398,7 @@ drawCanvas.addEventListener('mousedown', (e) => {
 drawCanvas.addEventListener('mousemove', (e) => {
   if (!drawing || !drawingEnabled) return;
   drawCtx.lineTo(e.clientX, e.clientY);
-  drawCtx.strokeStyle = '#ff00ff'; // fuchsia color
+  drawCtx.strokeStyle = '#ff00ff';
   drawCtx.lineWidth = 2;
   drawCtx.stroke();
 });
